@@ -4,21 +4,19 @@ plugins {
   id("org.graalvm.buildtools.native")
 }
 
-description = "smoke-tests-otel-starter"
+description = "smoke-tests-otel-starter-webflux"
 
 otelJava {
   minJavaVersionSupported.set(JavaVersion.VERSION_17)
 }
 
 dependencies {
-  implementation("org.springframework.boot:spring-boot-starter-web")
-  implementation("org.springframework.boot:spring-boot-starter-data-jdbc")
+  implementation("org.springframework.boot:spring-boot-starter-web") // for TestRestTemplate
+  implementation("org.springframework.boot:spring-boot-starter-webflux")
+  implementation("org.springframework.boot:spring-boot-starter-data-r2dbc")
   runtimeOnly("com.h2database:h2")
-  runtimeOnly("org.apache.commons:commons-dbcp2")
-  implementation(project(":instrumentation:jdbc:library"))
-  implementation("org.springframework.kafka:spring-kafka") // not tested here, just make sure there are no warnings when it's included
-  implementation("org.springframework.boot:spring-boot-starter-webflux") // not tested here, just make sure there are no warnings when it's included
-  implementation("io.opentelemetry:opentelemetry-extension-trace-propagators")
+  runtimeOnly("io.r2dbc:r2dbc-h2")
+  implementation(project(":instrumentation:r2dbc-1.0:library"))
   implementation(project(":instrumentation:spring:starters:spring-boot-starter"))
   implementation(platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES))
 
@@ -27,10 +25,6 @@ dependencies {
 }
 
 tasks {
-  test {
-    // suppress warning about byte-buddy-agent being loaded dynamically
-    jvmArgs("-XX:+EnableDynamicAgentLoading")
-  }
   compileAotJava {
     with(options) {
       compilerArgs.add("-Xlint:-deprecation,-unchecked,none")
